--- a/about.html
+++ b/about.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> CHELLA MAN: ABOUT ME</title>
     
     <LINK rel="stylesheet" href="css/styles.css" media="all" />
@@ -30,10 +31,12 @@
     <article>
         
         <h2>
-            <p>I am an eighteen-year-old, deaf, queer, genderqueer, Chinese/Jewish artist.</p>
-            <p>My inspiration is anything I stumble upon that I find aesthetically pleasing.</p>
-            <P> This could be a Picasso in the MoMA or a polka-dotted hat on the NY subway. </P>
-            <P>Mainly, however, I create my art by extracting my emotions from life experiences.</p>
+            <p>Chella Man, 18 years old, queer, genderqueer, deaf
+Currently transitioning on testosterone (4 months)
+<p>Pronouns: he/him</p>
+<p>I’d rather not represent where i’m from, so I’m just going to say somewhere insanely closed minded.</p>
+<p>I’m passionate about the combination of art and computer science and making sure the people I love are safe, happy, and secure.
+            </p>
         </h2>
     </article>
 
@@ -43,10 +46,10 @@
         <p><small>Chella Man &copy; 2017</small></p>
            <div class="logo">
                <a href="https://www.instagram.com/chella.man/">
-           <img src="img/instagram.jpg" width="25" height="25">
+           <img src="img/instagram.jpg" width="25" height="25" alt="Instagram">
                    </a>
                <a href="https://twitter.com/chellamanart">
-           <img src="img/twitter.jpg" width="25" height="25">
+           <img src="img/twitter.jpg" width="25" height="25" alt="Twitter">
                </a>
            </div>
     </footer>
