--- a/fine_arts.html
+++ b/fine_arts.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> CHELLA MAN: FINE ARTS</title>
     <LINK rel="stylesheet" href="css/styles.css" media="all"/>
         <link rel="icon" type="img/png" href="img/Icon.png"/>
@@ -46,11 +47,11 @@
       <footer>
         <p><small>Chella Man &copy; 2017</small></p>
            <div class="logo">
-               <a href="https://www.instagram.com/chella.man/">
-           <img src="img/instagram.jpg" width="25" height="25">
+                <a href="https://www.instagram.com/chella.man/">
+           <img src="img/instagram.jpg" width="25" height="25" alt="Instagram">
                    </a>
                <a href="https://twitter.com/chellamanart">
-           <img src="img/twitter.jpg" width="25" height="25">
+           <img src="img/twitter.jpg" width="25" height="25" alt="Twitter">
                </a>
            </div>
     </footer>
