--- a/films.html
+++ b/films.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> CHELLA MAN: FILMS</title>
     <LINK rel="stylesheet" href="css/styles.css" media="all"/>
         <link rel="icon" type="img/png" href="img/Icon.png"/>
@@ -26,19 +27,22 @@
     </header>
 
    <h2>CHECK OUT MY YOUTUBE:</h2>
-    <a href="https://www.youtube.com/channel/UCa1vUXV2WMRobPo-ZfEeRhg/videos">
-        <img src="img/youtube.png" height="300" width="350" alt="youtube logo"> 
-    </a>
+    <div style="width:100%; height:100%">
+         <button 
+     onclick=" window.open('https://www.youtube.com/channel/UCa1vUXV2WMRobPo-ZfEeRhg/videos','_blank')">
+        <img  src="img/youtube.png" height="300" width="100%" alt="youtube logo"> 
+       </button>
+        </div>
 </body>
     
     <footer>
         <p><small>Chella Man &copy; 2017</small></p>
            <div class="logo">
                <a href="https://www.instagram.com/chella.man/">
-           <img src="img/instagram.jpg" width="25" height="25">
+           <img src="img/instagram.jpg" width="25" height="25" alt="Instagram">
                    </a>
                <a href="https://twitter.com/chellamanart">
-           <img src="img/twitter.jpg" width="25" height="25">
+           <img src="img/twitter.jpg" width="25" height="25" alt="Twitter">
                </a>
            </div>
     </footer>
