Contact and Resume Code

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
                 <li><a class="nav-links" href="films.html">FILMS</a></li>
                 <li><a class="nav-links" href="apparel.html">APPAREL</a></li>
                 <li><a class="nav-links" href="photography.html">PHOTOGRAPHY</a></li>
+                 <li><a class="nav-links" href="resume.html">RESUME</a></li>
             </ul>
         </nav>
       
