Updated Code Oct31

--- a/apparel.html
+++ b/apparel.html
@@ -28,6 +28,7 @@
                 <li><a class="nav-links" href="apparel.html">APPAREL</a></li>
                 <li><a class="nav-links" href="photography.html">PHOTOGRAPHY</a></li>
                  <li><a class="nav-links" href="resume.html">RESUME</a></li>
+                   <li><a class="nav-links" href="ask.html">CONTACT ME</a></li>
             </ul>
         </nav>
     </header>
