--- a/ask.html
+++ b/ask.html
@@ -24,6 +24,7 @@
                 <li><a class="nav-links" href="photography.html">PHOTOGRAPHY</a></li>
                 <li><a class="nav-links" href="resume.html">RESUME</a></li>
                 <li><a class="nav-links" href="ask.html">CONTACT ME</a></li>
+                <li><a class="nav-links" href="proposal.html">PROPOSAL</a></li>
             </ul>
         </nav>
     </header>
