adding more art

--- a/apparel.html
+++ b/apparel.html
@@ -41,6 +41,7 @@
     <img src="img/apparel1.jpg" width="400" height="530" alt="jumpsuit">
      <img src="img/apparel2.jpg"width="450" height="500" alt="sweatshirt">
      <img src="img/apparel3.jpg"width="400" height="630" alt="overalls">
+         <img src="img/apparel5.jpg"width="400" height="630" alt="tshirt">
 </div>
     
      <footer>
