--- a/fine_arts.html
+++ b/fine_arts.html
@@ -43,6 +43,8 @@
     <img src="img/fineart3.jpg" width="900" height="900" alt="femme">
     <img src="img/fineart4.jpg" width="800" height="730" alt="body image">
     <img src="img/fineart5.jpg" width="900" height="900" alt="stunned">
+    <img src="img/loosenUp.jpg" width="900" height="900" alt="loosen up">
+    <img src="img/letGo2.jpg" width="900" height="900" alt="let go">
 </div>
    
     </body>
