--- a/fine_arts.html
+++ b/fine_arts.html
@@ -29,7 +29,7 @@
                 <li><a class="nav-links" href="photography.html">PHOTOGRAPHY</a></li>
                  <li><a class="nav-links" href="resume.html">RESUME</a></li>
                    <li><a class="nav-links" href="ask.html">CONTACT ME</a></li>
-                <li><a class="nav-links" href="proposal.html">PROPOSAL</a></li>
+               <li><a class="nav-links" href="place.html">LOCATION</a></li>
             </ul>
         </nav>
     </header>
