--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <li><a class="nav-links" href="photography.html">PHOTOGRAPHY</a></li>
                  <li><a class="nav-links" href="resume.html">RESUME</a></li>
                    <li><a class="nav-links" href="ask.html">CONTACT ME</a></li>
-                <li><a class="nav-links" href="place.html">LOCATION</a></li>
+                <li><a class="nav-links" href="place.html"> BOOT STRAP THEME</a></li>
             </ul>
         </nav>
       
