--- a/place.html
+++ b/place.html
@@ -4,15 +4,16 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> CHELLA MAN: RESUME</title>
+    <title> BOOT STRAP THEME</title>
     <LINK rel="stylesheet" href="css/styles.css" media="all"/>
+        <LINK rel="stylesheet" href="bootstrap/css/styles-done.css" media="all"/>
         <link rel="icon" type="img/png" href="img/Icon.png"/>
     <link href="https://fonts.googleapis.com/css?family=Droid+Sans" rel="stylesheet">
 </head>
 
 <body class="form">
     <header>
-              <h1><a class="backHome" href="index.html">RESUME</a></h1>
+              <h1><a class="backHome" href="index.html"> BOOT STRAP THEME</a></h1>
         
        <nav>
             <ul>
@@ -24,7 +25,7 @@
                 <li><a class="nav-links" href="photography.html">PHOTOGRAPHY</a></li>
                 <li><a class="nav-links" href="resume.html">RESUME</a></li>
                 <li><a class="nav-links" href="ask.html">CONTACT ME</a></li>
-                <li><a class="nav-links" href="place.html">LOCATION</a></li>
+                <li><a class="nav-links" href="place.html"> BOOT STRAP THEME</a></li>
             </ul>
         </nav>
     </header>
