--- a/ask.html
+++ b/ask.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css?family=Droid+Sans" rel="stylesheet">
 </head>
 
-<body class="form">
+<body >
     <header>
               <h1><a class="backHome" href="index.html">RESUME</a></h1>
         
@@ -30,7 +30,7 @@
     </header>
     
    <div class="container">
-  <form action="/action_page.php">
+  <form class="form" action="/action_page.php">
 
     <label for="fname">First Name</label>
     <input type="text" id="fname" name="firstname" placeholder="Your name..">
