--- a/ask.html
+++ b/ask.html
@@ -30,7 +30,7 @@
     </header>
     
    <div class="container">
-  <form class="form" action="/action_page.php">
+  <form class="form" action="mailto:26rachelman@gmail.com">
 
     <label for="fname">First Name</label>
     <input type="text" id="fname" name="firstname" placeholder="Your name..">
