--- a/films.html
+++ b/films.html
@@ -31,13 +31,12 @@
 
    <h2>CHECK OUT MY YOUTUBE:</h2>
     
-    <div style="width:100%; height:100%">
-         <button 
-     onclick=" window.open('https://www.youtube.com/channel/UCa1vUXV2WMRobPo-ZfEeRhg/videos','_blank')">
-        <img  src="img/youtube.png" height="300" width="100%" alt="youtube logo"> 
-       </button>
-        </div>
-</body>
+      <video preload="metadata" controls poster="mov/sketch.png"
+             width = "600">
+                        <source src="mov/sketch.mp4" type="video/mp4">
+                        <source src="mov/sketch.webm" type="video/webm">
+                        <a href="mov/sketch.mp4">Download the video</a>
+                    </video>
     
     <footer>
         <p><small>Chella Man &copy; 2017</small></p>
